--- a/src/app/features/reactive-form-demo/reactive-form-demo.component.html
+++ b/src/app/features/reactive-form-demo/reactive-form-demo.component.html
@@ -1,2 +1,63 @@
-<p>reactive-form-demo works!</p>
- <div class="tw-flex"></div>
+
+
+<h2 class="mt-10">Demo Registration Form</h2>
+
+
+
+<div class="flex">
+
+    <div class="basis-2/3 p-5 border-gray-200 border-solid border-2 rounded">
+        <form name="registrationForm" [formGroup]="registrationForm">
+            <div class="">
+                <label class="block text-gray-700" for="firstName">First Name</label>
+                <input type="text"  formControlName ="firstName"  name="firstName" id="firstName" class="form-input mt-1 block w-full">
+            </div>
+            <div class="mt-3">
+                <label class="block text-gray-700" for="surName">Surname</label>
+                <input type="text" formControlName ="surName" name="surName" id="surName" class="form-input mt-1 block w-full">
+            </div>
+    
+            <div class="mt-12">
+                <label for="email" class="block text-gray-700">Email</label>
+                <input type="email" formControlName ="email" name="email" id="email" class="form-input mt-1 block w-full">
+            </div>
+    
+    
+            <div class="mt-12">
+                <label for="password1" class="block text-gray-700">Password</label>
+                <input type="password" formControlName ="password1" name="password1" id="password1" class="form-input mt-1 block w-full">
+            </div>
+            <div class="mt-3">
+                <label for="password2" class="block text-gray-700">Confirm password</label>
+                <input type="password" formControlName ="password2" name="password2" id="password2" class="form-input mt-1 block w-full">
+            </div>
+    
+            <div class="mt-12 flex">
+                <button class="bg-green-900 text-white p-3 ml-auto w-full" type="submit">
+                    Submit
+                </button>
+            </div>
+        </form>
+    </div>
+    
+    <div class="basis-1/3 bg-gray-100 p-3 ml-1">
+        <h2>Form values</h2>
+        <pre> {{ registrationForm?.value | json }}</pre>
+        <pre><strong>Dirty:</strong> {{ registrationForm.dirty}}</pre>
+        
+        <pre><strong>Touched:</strong> {{ registrationForm?.touched  }}</pre>
+        <pre><strong>Untouched:</strong> {{ registrationForm?.untouched}}</pre>
+       
+        <pre><strong>Valid:</strong> {{ registrationForm?.valid }}</pre>
+        <pre><strong>Invalid:</strong> {{ registrationForm?.invalid  }}</pre>
+        
+        <pre><strong>Disabled:</strong>  {{ registrationForm?.disabled  }}</pre>
+        <pre><strong>Enabled:</strong> {{ registrationForm?.enabled }}</pre>
+       
+        <pre><strong>Pending:</strong> {{ registrationForm?.pending }}</pre>
+        <pre><strong>Updated on:</strong> {{ registrationForm?.updateOn }}</pre>
+        <pre><strong>Validator:</strong>{{ registrationForm?.validator }}</pre>
+    </div> 
+    
+</div>
+
