--- a/src/app/features/reactive-form-demo/reactive-form-demo.component.html
+++ b/src/app/features/reactive-form-demo/reactive-form-demo.component.html
@@ -8,10 +8,12 @@
 
     <div class="basis-2/3 p-5 border-gray-200 border-solid border-2 rounded">
         <form name="registrationForm" [formGroup]="registrationForm">
-            <div class="">
+
+            <app-first-name-input formControlName="firstName"></app-first-name-input>
+            <!-- <div class="">
                 <label class="block text-gray-700" for="firstName">First Name</label>
                 <input type="text"  formControlName ="firstName"  name="firstName" id="firstName" class="form-input mt-1 block w-full">
-            </div>
+            </div> -->
             <div class="mt-3">
                 <label class="block text-gray-700" for="surName">Surname</label>
                 <input type="text" formControlName ="surName" name="surName" id="surName" class="form-input mt-1 block w-full">
@@ -42,8 +44,8 @@
     
     <div class="basis-1/3 bg-gray-100 p-3 ml-1">
         <h2>Form values</h2>
-        <pre> {{ registrationForm?.value | json }}</pre>
-        <pre><strong>Dirty:</strong> {{ registrationForm.dirty}}</pre>
+       <pre> {{ registrationForm?.value | json }}</pre> 
+         <pre><strong>Dirty:</strong> {{ registrationForm.dirty}}</pre>
         
         <pre><strong>Touched:</strong> {{ registrationForm?.touched  }}</pre>
         <pre><strong>Untouched:</strong> {{ registrationForm?.untouched}}</pre>
